# devops-todoapp-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: build.yaml  load_dump.yaml
fastapi_todoapp/: main.py
fastapi_todoapp/libs/: database.py
fastapi_todoapp/models/: task.py
fastapi_todoapp/repositories/: task.py
fastapi_todoapp/routers/: task.py
fastapi_todoapp/schemas/: task.py
migrations/: tables.sql
pipelines/: build.jenkins
scripts/: deploy.sh
tests/: test_fastapi_todoapp.py
