[tool.poetry]
name = "fastapi-todoapp"
version = "1.0.9"
description = "FastAPI Backend for Todo App"
authors = ["Phu Le <phu.le.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
mysql-connector-python = "^8.0.28"
SQLAlchemy = "^1.4.31"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
